--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright (C) 2003-2014 eXo Platform SAS.
+    Copyright (C) 2003-2014 eXo Platforms SAS.
 
     This file is part of eXo parent POM.
 
